--- a/artiq/firmware/bootloader/Cargo.toml
+++ b/artiq/firmware/bootloader/Cargo.toml
@@ -17,3 +17,4 @@ byteorder = { version = "1.0", default-features = false }
 crc = { version = "1.7", default-features = false }
 board_misoc = { path = "../libboard_misoc", features = ["uart_console", "smoltcp"] }
 smoltcp = { version = "0.6.0", default-features = false, features = ["ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp"] }
+riscv = { version = "0.6.0", features = ["inline-asm"] }
