bootloader: swap endianness
Signed-off-by: occheung <dc@m-labs.hk>

--- a/artiq/firmware/bootloader/Makefile
+++ b/artiq/firmware/bootloader/Makefile
@@ -14,4 +14,5 @@ bootloader.elf: $(RUSTOUT)/libbootloader.a
 
 %.bin: %.elf
 	$(objcopy) -O binary
-	$(MSCIMG) $@
+	$(MSCIMG) $@ --little
+	objcopy -I binary -O binary --reverse-bytes=4 $@
