rust: fix dependencies

--- a/artiq/firmware/libunwind_backtrace/Cargo.toml
+++ b/artiq/firmware/libunwind_backtrace/Cargo.toml
@@ -6,3 +6,7 @@ version = "0.0.0"
 [lib]
 name = "unwind_backtrace"
 path = "lib.rs"
+
+[dependencies]
+unwind = { path = "../libunwind" }
+libc = { path = "../libc" }
